fix(css): better tabs alignment

--- a/src/app/user-interface/sidebar/sidebar.component.scss
+++ b/src/app/user-interface/sidebar/sidebar.component.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   padding: 1em;
+  padding-bottom: 0;
   box-sizing: border-box;
   box-shadow: -1px 0 0 rgba(black, .1);
 }
